--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa fa-menu" style="color: red !important;"></i>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse pt-md-1" id="navbarText"  style="background-color: gray;">
+                <div class="collapse navbar-collapse pt-md-1" id="navbarText">
                     <ul class="navbar-nav mt-1 mx-auto">
                         <li class="nav-item px-3">
                             <a class="nav-link active" href="index.html">HOME</a>
@@ -61,20 +61,64 @@
         <div class="content">
             <div class="row">
                 <div class="col-md-11"></div>
-                <div class="col-md-1">
+                <div class="content">
+                    <div class="row">
+                        <div class="social float-right">
+                            <ul class="list-unstyled">
+                                <li class="py-2">
+                                    <a href="https://music.apple.com/us/artist/vetr/1456667173" target="_blank">
+                                        <img width="20px" src="images/iTunes.png" alt="">
+                                    </a>
+                                </li>
+                                <li class="py-2">
+                                    <a href="https://open.spotify.com/artist/3OcSvvEkZToGZ2PU2awKxm?si=JK6nXlgOQsSNmK1tZLeczA"
+                                        target="_blank">
+                                        <img width="20px" src="images/Sptify.png" alt="">
+                                    </a>
+                                </li>
+                                <li class="py-2">
+                                    <a href="https://www.youtube.com/channel/UCRyQssp0O63Y8dc79LIjV8g?view_as=subscriber"
+                                        target="_blank">
+                                        <img width="20px" src="images/YouTube.png" alt="">
+                                    </a>
+                                </li>
+                                <li class="py-2">
+                                    <a href="http://instagram.com/vetrmusic" target="_blank">
+                                        <img width="20px" src="images/Instagram.png" alt="">
+                                    </a>
+                                </li>
+                                <li class="py-2">
+                                    <a href="http://soundcloud.com/vetr" target="_blank">
+                                        <img width="20px" src="images/SoundCloud.png" alt="">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-md-1">
+
+                    </div>
 
                 </div>
-
             </div>
+
         </div>
+        <!-- Footer -->
+        <footer class="page-footer font-small blue pt-4 " style="margin-top: 240px;">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
+            </div>
+            <!-- Copyright -->
 
-    </div>
+        </footer>
+        <!-- Footer -->
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 
 </body>
 
