--- a/lyric.html
+++ b/lyric.html
@@ -11,10 +11,12 @@
         body {
             background-color: black;
         }
+
         @media (min-width: 993px) and (max-width: 1196px) {
             h3 {
                 font-size: 18px;
             }
+
             p {
                 font-size: 10px;
             }
@@ -127,7 +129,7 @@
                 <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
                     <img class="card-img" src="images/Cover_Lyric4.png" alt="Card image">
                     <div class="card-img-overlay ">
-                        <h3 class="card-title pb-5 mt-5 pt-5">My Three-Year-Old Hero</h3>
+                        <h3 class="card-title pb-5 mt-5 pt-5">When I Hear Your Name</h3>
                         <hr class="col-2 mt-5 mb-5" style="border: white 6px solid;">
                         <p class="pt-5">Choose a language</p>
                         <p>to see lyric of the music:</p>
@@ -144,9 +146,17 @@
         </div>
 
     </div>
+    <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4 " style="margin-top: 50px;">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
+        </div>
+        <!-- Copyright -->
 
+    </footer>
+    <!-- Footer -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+        integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
