--- a/video.html
+++ b/video.html
@@ -66,19 +66,19 @@
             </div>
             <div class="content mb-5">
                 <div class="col-6 mx-auto text-center">
-                    <h1 class="text-white pt-2" style="font-size: 2.5vw;">
+                    <h1 class="text-white" style="font-size: 2.5vw;">
                         Latest Video
                     </h1>
                 </div>
-                <div class="col-md-6 mx-auto pt-3 pb-3 bg-white">
+                <div class="col-md-8 mx-auto pt-3 pb-3" style="background-color: #676767;">
                     <iframe
-                        style="width: inherit; height: 310px;"
+                        style="width: inherit; height: 410px;"
                         src="https://www.youtube.com/embed/P4fZPHgXAxM"
                         frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                     ></iframe>
-                    <div class="bg-dark text-white p-2 mb-4">
+                    <div class="bg-dark text-white p-2 mb-5">
                         Drink Some Water
                         <a
                             href="https://www.aparat.com/v/C2Qyj"
@@ -94,13 +94,13 @@
                         >
                     </div>
                     <iframe
-                        style="width: inherit; height: 310px;"
+                        style="width: inherit; height: 410px;"
                         src="https://www.youtube.com/embed/dIUcpSj4yhk"
                         frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                     ></iframe>
-                    <div class="bg-dark text-white p-2 mb-4">
+                    <div class="bg-dark text-white p-2 mb-5">
                         Drink Some Water
                         <a
                             href="https://www.aparat.com/v/QOCEh"
@@ -116,13 +116,13 @@
                         >
                     </div>
                     <iframe
-                        style="width: inherit; height: 310px;"
+                        style="width: inherit; height: 410px;"
                         src="https://www.youtube.com/embed/o9gm2JlkiOE"
                         frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
                     ></iframe>
-                    <div class="bg-dark text-white p-2">
+                    <div class="bg-dark text-white p-2 mb-5">
                         Drink Some Water
                         <a
                             href="https://www.aparat.com/v/zky0G"
@@ -138,8 +138,8 @@
                         >
                     </div>
                     <iframe
-                        style="width: inherit; height: 310px;"
-                        src="https://www.youtube.com/embed/o9gm2JlkiOE"
+                        style="width: inherit; height: 410px;"
+                        src="https://www.youtube.com/embed/rSKGMQh0cNw"
                         frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
@@ -162,7 +162,15 @@
                 </div>
             </div>
         </div>
+        <!-- Footer -->
+        <footer class="page-footer font-small blue pt-4 " style="margin-top: 50px;">
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
+            </div>
+            <!-- Copyright -->
 
+        </footer>
+        <!-- Footer -->
         <script
             src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
             integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
