--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,13 @@
         </div>
 
     </div>
+    <footer class="page-footer font-small blue pt-4 " style="margin-top: 50px;">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
+        </div>
+        <!-- Copyright -->
 
+    </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
