--- a/about.html
+++ b/about.html
@@ -77,11 +77,11 @@
                 <h1 class="text-white pt-2 pb-2" style="font-size: 2.5vw;">About Vetr</h1>
             </div>
 
-            <div class="col-md-6 mx-auto p-0"
+            <div id="image" class="col-md-6 mx-auto p-0"
                 style="background-image: url('images/Vetr_Avatar.png');height: 550px;background-size: contain;background-repeat: no-repeat;">
                 <span class="m-5 pb-4 text-white text-center"
                     style="position: absolute;border: blanchedalmond 5px solid;">
-                    <p class="p-4 text-center">
+                    <p class="p-4 text-center" >
                         There is a fire, which is hidden in the hearts. It's a fire, which never grows cold. This is a
                         secret, which the people of the world do not yet know about. This is why Vetr was born, in order
                         to tell more people throughout the world about small bits of this secret with its stories.
